sfdx-source/unpackaged - コピー/main/default/objects/SmartViscaf__NameCardHistory__c/fields/SmartViscaf__delete_time__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__delete_time__c</fullName>
    <label>削除日時</label>
    <type>DateTime</type>
</CustomField>