sfdx-source/unpackaged - コピー/main/default/objects/SmartViscaf__NameCardHistory__c/fields/SmartViscaf__error_code__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__error_code__c</fullName>
    <label>エラーコード</label>
    <length>1</length>
    <type>Text</type>
</CustomField>