sfdx-source/unpackaged - コピー/main/default/objects/SmartViscaf__NameCardHistory__c/fields/SmartViscaf__NameCard__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__NameCard__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>名刺オブジェクトID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>