sfdx-source/unpackaged - コピー/main/default/objects/SmartViscaf__NameCardHistory__c/fields/SmartViscaf__NameCardOwner__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__NameCardOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺所有者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>nc_NameCardOwner</relationshipName>
    <type>Lookup</type>
</CustomField>