sfdx-source/unpackaged - コピー/main/default/objects/SmartViscaf__NameCardHistory__c/fields/SmartViscaf__secondary_delivery_time__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__secondary_delivery_time__c</fullName>
    <label>二次納品日時</label>
    <type>DateTime</type>
</CustomField>